mock_server_deployment.yaml
# ------------------- Deployment ------------------- #
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    k8s-app: mock
  name: mock
  namespace: lab-02
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: mock
  template:
    metadata:
      labels:
        k8s-app: mock
    spec:
      containers:
        - name: mock
          image: qa-gov.cn.lab/mock-server:v1.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.5"
            limits:
              memory: "1Gi"
              cpu: "0.5"
